# taintfuzz

./: Makefile.am  build_taintgrind.sh  taintfuzz  tnt_include.h  tnt_main.c
tests/: checktaint.c  heartbleed.c  memchr.c  memcpy.c  misprint.c  sign16.c  sign32.c  sign64.c  sign8.c  signstdin.c  signstdin2.c
